new basepath portfolio_team

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ import Hero from '../components/Hero.astro';
 			>
 				<img
 					width="300"
-					src="/assets/team.jpeg"
+					src="/portfolio_team/assets/team.jpeg"
 					alt="Fullstacks at work with a colleague"
 				/>
 			</Hero>
