--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const projects = (await getCollection('work'))
 					alt="Fullstacks team"
 					width="480"
 					height="620"
-					src="/assets/team.jpeg"
+					src="/portfolio_team/assets/team.jpeg"
 				/>
 			</header>
 
@@ -171,7 +171,7 @@ const projects = (await getCollection('work'))
 		top: 0;
 		transform: translateY(-75%) translateX(-50%);
 		background:
-			url('/assets/backgrounds/noise.png') top center/220px repeat,
+			url('/portfolio_team/assets/backgrounds/noise.png') top center/220px repeat,
 			var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
 			var(--gray-999);
 		background-blend-mode: overlay, normal, normal, normal;
