--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,9 +5,9 @@ import type { iconPaths } from './IconPaths';
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'Home', href: '/' },
-	{ label: 'Work', href: '/work/' },
-	{ label: 'About', href: '/about/' },
+	{ label: 'Home', href: '/portfolio_team' },
+	{ label: 'Work', href: '/portfolio_team/work/' },
+	{ label: 'About', href: '/portfolio_team/about/' },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
@@ -17,7 +17,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 
 <nav>
 	<div class="menu-header">
-		<a href="/" class="site-title">
+		<a href="/portfolio_team" class="site-title">
 			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
 			Fullstacks
 		</a>
@@ -42,7 +42,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 								{
 									active:
 										Astro.url.pathname === href ||
-										(href !== '/' && Astro.url.pathname.startsWith(href)),
+										(href !== '/portfolio_team' && Astro.url.pathname.startsWith(href)),
 								},
 							]}
 							href={href}
