--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,30 +1,37 @@
 ---
-import Icon from './Icon.astro';
-import ThemeToggle from './ThemeToggle.astro';
-import type { iconPaths } from './IconPaths';
+import Icon from "./Icon.astro";
+import ThemeToggle from "./ThemeToggle.astro";
+import type { iconPaths } from "./IconPaths";
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
-	{ label: 'Home', href: '/portfolio_team/' },
-	{ label: 'Work', href: '/portfolio_team/work/' },
-	{ label: 'About', href: '/portfolio_team/about/' },
+	{ label: "Home", href: "/portfolio_team/" },
+	{ label: "Work", href: "/portfolio_team/work/" },
+	{ label: "About", href: "/portfolio_team/about/" },
 ];
 
 /** Icon links to social media — edit these with links to your profiles! */
-const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
-];
+const iconLinks: {
+	label: string;
+	href: string;
+	icon: keyof typeof iconPaths;
+}[] = [];
 
-let currentUrl = Astro.url.pathname
-if (!currentUrl.endsWith("/")){
-	currentUrl+="/"
+let currentUrl = Astro.url.pathname;
+if (!currentUrl.endsWith("/")) {
+	currentUrl += "/";
 }
 ---
-
 
 <nav>
 	<div class="menu-header">
 		<a href="/portfolio_team/" class="site-title">
-			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
+			<Icon
+				icon="terminal-window"
+				color="var(--accent-regular)"
+				size="1.6em"
+				gradient
+			/>
 			Fullstacks
 		</a>
 		<menu-button>
@@ -44,10 +51,12 @@ if (!currentUrl.endsWith("/")){
 						<a
 							aria-current={currentUrl === href}
 							class:list={[
-								'link',
+								"link",
 								{
 									active:
-										currentUrl === href
+										currentUrl === href ||
+										(href !== "/portfolio_team/" &&
+											currentUrl.startsWith(href)),
 								},
 							]}
 							href={href}
@@ -81,10 +90,12 @@ if (!currentUrl.endsWith("/")){
 						<a
 							aria-current={currentUrl === href}
 							class:list={[
-								'link',
+								"link",
 								{
 									active:
-										currentUrl === href
+										currentUrl === href ||
+										(href !== "/portfolio_team/" &&
+											currentUrl.startsWith(href)),
 								},
 							]}
 							href={href}
@@ -120,35 +131,39 @@ if (!currentUrl.endsWith("/")){
 			super();
 
 			// Inject menu toggle button when JS runs.
-			this.appendChild(this.querySelector('template')!.content.cloneNode(true));
-			const btn = this.querySelector('button')!;
+			this.appendChild(
+				this.querySelector("template")!.content.cloneNode(true),
+			);
+			const btn = this.querySelector("button")!;
 
 			// Hide menu (shown by default to support no-JS browsers).
-			const menu = document.getElementById('menu-content')!;
+			const menu = document.getElementById("menu-content")!;
 			menu.hidden = true;
 			// Add "menu-content" class in JS to avoid covering content in non-JS browsers.
-			menu.classList.add('menu-content');
+			menu.classList.add("menu-content");
 
 			/** Set whether the menu is currently expanded or collapsed. */
 			const setExpanded = (expand: boolean) => {
-				btn.setAttribute('aria-expanded', expand ? 'true' : 'false');
+				btn.setAttribute("aria-expanded", expand ? "true" : "false");
 				menu.hidden = !expand;
 			};
 
 			// Toggle menu visibility when the menu button is clicked.
-			btn.addEventListener('click', () => setExpanded(menu.hidden));
+			btn.addEventListener("click", () => setExpanded(menu.hidden));
 
 			// Hide menu button for large screens.
-			const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
+			const handleViewports = (
+				e: MediaQueryList | MediaQueryListEvent,
+			) => {
 				setExpanded(e.matches);
 				btn.hidden = e.matches;
 			};
-			const mediaQueries = window.matchMedia('(min-width: 50em)');
+			const mediaQueries = window.matchMedia("(min-width: 50em)");
 			handleViewports(mediaQueries);
-			mediaQueries.addEventListener('change', handleViewports);
+			mediaQueries.addEventListener("change", handleViewports);
 		}
 	}
-	customElements.define('menu-button', MenuButton);
+	customElements.define("menu-button", MenuButton);
 </script>
 
 <style>
@@ -188,7 +203,7 @@ if (!currentUrl.endsWith("/")){
 		box-shadow: var(--shadow-md);
 	}
 
-	.menu-button[aria-expanded='true'] {
+	.menu-button[aria-expanded="true"] {
 		color: var(--gray-0);
 		background: linear-gradient(180deg, var(--gray-600), transparent),
 			radial-gradient(var(--gray-900), var(--gray-800) 150%);
@@ -201,7 +216,7 @@ if (!currentUrl.endsWith("/")){
 	.menu-button::before {
 		position: absolute;
 		inset: -1px;
-		content: '';
+		content: "";
 		background: var(--gradient-stroke);
 		border-radius: 999rem;
 		z-index: -1;
@@ -310,7 +325,7 @@ if (!currentUrl.endsWith("/")){
 		.nav-items::before {
 			position: absolute;
 			inset: -1px;
-			content: '';
+			content: "";
 			background: var(--gradient-stroke);
 			border-radius: 999rem;
 			z-index: -1;
