--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -14,14 +14,14 @@ const projects = (await getCollection('work')).sort(
 ---
 
 <BaseLayout
-	title="My Work | Fullstacks"
+	title="Our Work | Fullstacks"
 	description="Learn about Fullstacks team most recent projects"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="My Work"
-				tagline="See my most recent projects below to get an idea of my past experience."
+				title="Recent Projects"
+				tagline="Reviewing our recent projects is to discover the innovation that drives our future."
 				align="start"
 			/>
 			<Grid variant="offset">
