--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -253,3 +253,11 @@ h5 {
 		gap: 12rem;
 	}
 }
+
+.image-with-scale:hover{
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	transform: scale(1.5);
+}
